# Computer-Vision

Digital Image Processing/equalization/: CMakeLists.txt
Digital Image Processing/equalization/src/: equalization.cpp  (+1 more)
Digital Image Processing/fundamentals/: CMakeLists.txt
Digital Image Processing/interpolation/: CMakeLists.txt
Digital Image Processing/sampling and quantization/: CMakeLists.txt
Digital Image Processing/sampling and quantization/.cache/clangd/index/: main.cpp.66B8046230D7F2F2.idx  operations.cpp.5CC224D7EF19084B.idx  operations.h.39BB8237B701A32D.idx  operations.h.B57608F79316B360.idx
Digital Image Processing/sampling and quantization/include/: operations.h
Digital Image Processing/sampling and quantization/src/: main.cpp  operations.cpp
Digital Image Processing/smoothing/: CMakeLists.txt
Digital Image Processing/smoothing/.cache/clangd/index/: spatial_filters.cpp.4E1D3D39AD33892E.idx
Digital Image Processing/smoothing/include/: spatial_filters.h
Digital Image Processing/smoothing/src/: main.cpp  spatial_filters.cpp
Digital-Image-Processing/: CMakeLists.txt
Digital-Image-Processing/C++/: CMakeLists.txt  README.md
Digital-Image-Processing/C++/core/: CMakeLists.txt
Digital-Image-Processing/C++/core/include/: intensity_transformations.h  limiars.h  spatial_filters.h
Digital-Image-Processing/C++/core/src/: equalizations.cpp  intensity_transformations.cpp  limiars.cpp  spatial_filters.cpp
Digital-Image-Processing/Python/: main.py
Digital-Image-Processing/core/: CMakeLists.txt
Digital-Image-Processing/programs/: CMakeLists.txt
(+108 files in other folders)
